# lenslogic

./: .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  USER_GUIDE.md  build.sh  demo.py  lenslogic.spec  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
config/: default_config.yaml
src/: main.py
src/modules/: backup_manager.py  config_wizard.py  duplicate_detector.py  enhanced_exif_extractor.py  enhanced_video_extractor.py  exif_extractor.py  file_renamer.py  folder_organizer.py  geolocation.py  image_processor.py  interactive_menu.py  session_detector.py  statistics_generator.py  xmp_analyzer.py
src/utils/: branding.py  camera_slugger.py  config_manager.py  progress_tracker.py
tests/: __init__.py  conftest.py  test_basic.py  test_config_manager.py  test_progress_tracker.py
