[project]
name = "lenslogic"
version = "1.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # Line too long - let ruff-format handle it
    "UP006", # Use `dict` instead of `Dict` - not compatible with Python 3.8
    "UP007", # Use `X | Y` for type annotations - not compatible with Python 3.8
    "UP035", # `typing.Dict` is deprecated - not in Python 3.8
    "UP045", # Use `X | None` instead of `Optional[X]` - not compatible with Python 3.8
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # Allow assert False in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
